# wasm-bindgen

./: index.html  introduction.html  print.html  searchindex.js  searchindex.json
api/: search-index.js  settings.html  source-files.js
api/js_sys/: index.html  struct.AsyncIterator.html  struct.Iterator.html  struct.Object.html  struct.Proxy.html  struct.Symbol.html
api/wasm_bindgen_futures/: all.html  (+1 more)
contributing/: index.html  publishing.html  team.html  testing.html
examples/: 2d-canvas.html  add.html  char.html  closures.html  console-log.html  dom.html  fetch.html  hello-world.html  import-js.html  index.html  julia.html  paint.html  performance.html  raytrace.html  request-animation-frame.html  todomvc.html  wasm-in-wasm.html  wasm2js.html  web-audio.html  webgl.html  webrtc_datachannel.html  websockets.html  without-a-bundler.html
examples/todomvc/: Cargo.toml
reference/: accessing-properties-of-untyped-js-values.html  arbitrary-data-with-serde.html  browser-support.html  cli.html  deployment.html  index.html  iterating-over-js-values.html  js-promises-and-rust-futures.html  js-snippets.html  optimize-size.html  passing-rust-closures-to-js.html  receiving-js-closures-in-rust.html  reference-types.html  rust-targets.html  types.html  weak-references.html  working-with-duck-typed-interfaces.html
wasm-bindgen-test/: asynchronous-tests.html  browsers.html  continuous-integration.html  index.html  usage.html
web-sys/: cargo-features.html  function-overloads.html  index.html  inheritance.html  type-translations.html  unstable-apis.html  using-web-sys.html
(+4229 files in other folders)
