[package]
name = "todomvc"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
askama = "0.11.1"

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
askama = "0.11.1"
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlBodyElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'Node',
  'NodeList',
  'Storage',
  'Window',
]
